--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+pip==19.2.3
+greenlet==1.0.0
+setuptools==41.2.0
+requests==2.21.0
