update all modul

--- a/cars_config_2.ini
+++ b/cars_config_2.ini
@@ -4,17 +4,21 @@ brand = mkId
 year = yrId
 trans_type = transTypeId
 
-[request_header]
-user-agent = Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.3 Safari/605.1.15
-accept-language = tr-TR,tr;q=0.8,en-US;q=0.5,en;q=0.3
-accept-encoding = gzip, deflate
-content-type = application/ocsp-request
-
 [query_header]
 exterior_color = extcolor
 brand = brand
 year = year
 trans_type = trans
+
+[request_settings]
+per_page = 50
+url = https://www.cars.com/for-sale/listings
+
+[request_header]
+user-agent = Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.3 Safari/605.1.15
+accept-language = tr-TR,tr;q=0.8,en-US;q=0.5,en;q=0.3
+accept-encoding = gzip, deflate
+content-type = application/ocsp-request
 
 [files]
 filter_path = ./data/car_filters.json
