--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
+greenlet==1.0.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.3
+lxml==4.6.3
 MarkupSafe==1.1.1
-Werkzeug==1.0.1
-pip==19.2.3
-greenlet==1.0.0
-setuptools==41.2.0
 requests==2.21.0
+soupsieve==2.2.1
+urllib3==1.24.3
+Werkzeug==1.0.1
